--- a/VCS/AEON/New Group/Cell/messaging_cell/receiver_cell/MesgReceiverTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/messaging_cell/receiver_cell/MesgReceiverTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,7 +26,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="351" height="140"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aeon_logo" translatesAutoresizingMaskIntoConstraints="NO" id="fpa-W7-qab">
-                                <rect key="frame" x="10" y="30" width="40" height="40"/>
+                                <rect key="frame" x="10" y="25" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="ST1-rq-E3o"/>
                                     <constraint firstAttribute="height" constant="40" id="xuS-aC-lbp"/>
@@ -39,10 +39,10 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b1G-ab-e0m">
-                                <rect key="frame" x="55" y="10" width="291" height="10"/>
+                                <rect key="frame" x="55" y="10" width="291" height="5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05-02-2019 5:00 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3z-ae-bLd">
-                                        <rect key="frame" x="5" y="-5" width="276" height="20.5"/>
+                                        <rect key="frame" x="5" y="-8" width="276" height="21"/>
                                         <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -50,41 +50,50 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="5" id="1dU-vp-WlZ"/>
                                     <constraint firstItem="n3z-ae-bLd" firstAttribute="centerY" secondItem="b1G-ab-e0m" secondAttribute="centerY" id="Dso-yi-5Gp"/>
-                                    <constraint firstAttribute="height" constant="10" id="cn5-eG-T07"/>
                                     <constraint firstItem="n3z-ae-bLd" firstAttribute="leading" secondItem="b1G-ab-e0m" secondAttribute="leading" constant="5" id="mFf-7W-Ddc"/>
                                     <constraint firstAttribute="trailing" secondItem="n3z-ae-bLd" secondAttribute="trailing" constant="10" id="vAV-Q9-W1F"/>
                                 </constraints>
                             </view>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IwT-6A-laf">
-                                <rect key="frame" x="60" y="30" width="221" height="105"/>
-                                <color key="backgroundColor" red="0.67473709037996688" green="0.75242842907832963" blue="0.55435935853721463" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="16"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6bX-eg-IOQ">
+                                <rect key="frame" x="55" y="25" width="226" height="110"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IwT-6A-laf">
+                                        <rect key="frame" x="10" y="5" width="206" height="100"/>
+                                        <color key="backgroundColor" red="0.67473709037996688" green="0.75242842907832963" blue="0.55435935853721463" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.65250855679999997" green="0.76065832379999998" blue="0.52309733629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="IwT-6A-laf" secondAttribute="bottom" constant="5" id="66e-O6-ubk"/>
+                                    <constraint firstItem="IwT-6A-laf" firstAttribute="top" secondItem="6bX-eg-IOQ" secondAttribute="top" constant="5" id="J5R-kF-qrU"/>
+                                    <constraint firstItem="IwT-6A-laf" firstAttribute="leading" secondItem="6bX-eg-IOQ" secondAttribute="leading" constant="10" id="gQ9-p3-Rpg"/>
+                                    <constraint firstAttribute="trailing" secondItem="IwT-6A-laf" secondAttribute="trailing" constant="10" id="zmw-Vq-3GF"/>
+                                </constraints>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                         <integer key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
-                            </textView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="IwT-6A-laf" firstAttribute="top" secondItem="b1G-ab-e0m" secondAttribute="bottom" constant="10" id="1tU-ez-SrH"/>
                             <constraint firstItem="fpa-W7-qab" firstAttribute="leading" secondItem="Qef-de-P42" secondAttribute="leading" constant="10" id="2cB-pz-R8h"/>
-                            <constraint firstItem="IwT-6A-laf" firstAttribute="top" secondItem="fpa-W7-qab" secondAttribute="top" id="45m-YE-bUH"/>
-                            <constraint firstItem="fpa-W7-qab" firstAttribute="top" secondItem="Qef-de-P42" secondAttribute="top" constant="30" id="Jlw-za-MEA"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="IwT-6A-laf" secondAttribute="trailing" constant="70" id="Lr2-Cg-7eV"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6bX-eg-IOQ" secondAttribute="trailing" constant="70" id="CQq-pF-SxH"/>
+                            <constraint firstItem="6bX-eg-IOQ" firstAttribute="top" secondItem="b1G-ab-e0m" secondAttribute="bottom" constant="10" id="I59-sq-027"/>
+                            <constraint firstItem="6bX-eg-IOQ" firstAttribute="leading" secondItem="fpa-W7-qab" secondAttribute="trailing" constant="5" id="Jvn-yr-JTI"/>
+                            <constraint firstAttribute="bottom" secondItem="6bX-eg-IOQ" secondAttribute="bottom" constant="5" id="Kd0-ea-Pfs"/>
                             <constraint firstItem="b1G-ab-e0m" firstAttribute="top" secondItem="Qef-de-P42" secondAttribute="top" constant="10" id="MWg-ZG-LQd"/>
-                            <constraint firstItem="IwT-6A-laf" firstAttribute="leading" secondItem="fpa-W7-qab" secondAttribute="trailing" constant="10" id="RKp-Hf-oC0"/>
-                            <constraint firstAttribute="bottom" secondItem="IwT-6A-laf" secondAttribute="bottom" constant="5" id="a0A-4W-TAJ"/>
                             <constraint firstItem="b1G-ab-e0m" firstAttribute="leading" secondItem="fpa-W7-qab" secondAttribute="trailing" constant="5" id="ccr-gL-3co"/>
                             <constraint firstAttribute="trailing" secondItem="b1G-ab-e0m" secondAttribute="trailing" constant="5" id="rfG-jN-kdK"/>
+                            <constraint firstItem="fpa-W7-qab" firstAttribute="top" secondItem="6bX-eg-IOQ" secondAttribute="top" id="zX5-HX-Z9p"/>
                         </constraints>
                     </view>
                 </subviews>
